--- a/src/app/pages/customer/cart/cart.component.html
+++ b/src/app/pages/customer/cart/cart.component.html
@@ -49,7 +49,10 @@
                   <td>
                     <div class="d-flex align-items-center">
                       <img
-                        [src]="item.productDetails.images[0] || 'https://placehold.co/50x50/CCCCCC/333333?text=No+Img'"
+                        [src]="
+                          item.productDetails.images[0] ||
+                          'https://placehold.co/50x50/CCCCCC/333333?text=No+Img'
+                        "
                         alt="{{ item.productDetails.name }}"
                         class="img-thumbnail me-3"
                         style="width: 50px; height: 50px; object-fit: cover"
@@ -59,7 +62,7 @@
                       }}</span>
                     </div>
                   </td>
-                  <td>Rs.{{ item.price | number : "1.2-2" }}</td>
+                  <td>₹{{ item.price | number : "1.2-2" }}</td>
                   <td>
                     <input
                       type="number"
