--- a/src/app/pages/Admin/admin-category/admin-category.component.html
+++ b/src/app/pages/Admin/admin-category/admin-category.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="card shadow-sm rounded-3">
     <div class="card-header bg-dark text-white py-3">
-      <h3 class="mb-0">Manage Product Categories (Admin)</h3>
+      <h3 class="mb-0">Manage Product Categories</h3>
     </div>
     <div class="card-body p-4">
       <div *ngIf="loading" class="text-center py-5">
